feature: Supports rating GC Logs
Note it seems the XmX value must be higher as the gctoolkit parses
more logs.